<?xml version="1.0"?>
<package format="2">
    <name>gazebo_sensors</name>
    <version>0.0.0</version>
    <description>收集gazebo中的一些传感器, 目前主要收集相机和雷达</description>
    <maintainer email="a1503741059@163.com">Tipriest</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>nav_msgs</depend>
    <depend>tf</depend>
</package>